# track_time

./: .gitignore  README.md  dmenu_launch  graph_times.py  pyproject.toml  run.sh  settings.py  track_time  track_time_demnu_launch  track_time_dmenu_launch
data/: 200308.csv  200402.csv  tt_db.sync-conflict-20210512-111931-BFLR4OG.csv
data_old/: 190521.csv  190522.csv  190523.csv  190524.csv  190527.csv  190528.csv  190529.csv  190530.csv  190603.csv  190604.csv  190606.csv  190611.csv  190612.csv  190613.csv  190614.csv  190617.csv  190618.csv  190619.csv  190620.csv  190621.csv  190622.csv  190623.csv  190624.csv  190625.csv  190626.csv  190627.csv  190628.csv  190630.csv  190701.csv  190702.csv  190703.csv  190706.csv  190707.csv  190708.csv  190709.csv  190710.csv  190711.csv  190712.csv  190713.csv  190714.csv  (+37 more)
scripts/: lint
tests/: test_domain.py  test_services.py
track_time/: __main__.py  collect.py  domain.py  graph_times.py  repos.py  services.py  settings.py
