[tool.poetry]
name = "track_time"
version = "0.1.0"
description = "Track your time spent on different projects"
authors = ["Sean F. Cleator <seancleator@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = "*"
pandas = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^22.6.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
