[tool.poetry]
name = "track_time"
version = "0.1.0"
description = "Track your time spent on different projects"
authors = ["Sean F. Cleator <seancleator@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = ">=3.12"
matplotlib = "*"
pandas = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
pytest = "*"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
